style由黑色变为白色

--- a/HdAndroidApp/res/values/styles.xml
+++ b/HdAndroidApp/res/values/styles.xml
@@ -1,9 +1,5 @@
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
@@ -13,11 +9,18 @@
     </style>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    <!--
+         <style name="AppTheme" parent="AppBaseTheme">
+        All customizations that are NOT specific to a particular API-level can go here.
+    </style>
+    -->
+    <style name="AppTheme" parent="AppBaseTheme"></style>
+
+    <!-- 当Acitivity不需要标题时可以使用此Style -->
+    <style name="ActivityNoBar" parent="AppBaseTheme">
+        <item name="android:windowNoTitle">true</item>
     </style>
 
-    <style name="title_font">
-        
-    </style>
+    <style name="title_font"></style>
+
 </resources>
